style.css
/*
Theme Name: Northern Media
Theme URI: http://www.northernmediauk.com;
Author: Northern Media
Author URI: http://www.northernmediauk.com
Description: A Web site built for Northern Media, by Northern Media
Version: 1.0.0
License: GNU General Public License v2 or later
License URI: http://www.gnu.org/licenses/gpl-2.0.html
Text Domain: northern_media
Tags:

This theme, like WordPress, is licensed under the GPL.
Use it to make something cool, have fun, and share what you've learned with others.

Northern Media is based on Underscores http://underscores.me/, (C) 2012-2015 Automattic, Inc.
Underscores is distributed under the terms of the GNU GPL v2 or later.

Normalizing styles have been helped along thanks to the fine work of
Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
*/

/*--------------------------------------------------------------
>>> TABLE OF CONTENTS:
----------------------------------------------------------------
*/

.map-container {
    width: 100%;
}
.map-container iframe{
    width: 100%;
    display: block;
    pointer-events: none;
    position: relative; /* IE needs a position other than static */
}
.map-container iframe.clicked{
    pointer-events: auto;
}

#newsletter-subscription li:first-of-type {
    font-weight: bold;
}

